<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.shoe.ShoeViewModel" />
    </data>

    <!--  Usage: Constraintlayout to layer the semitransparent background
        and all other views on top of each other.  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shoes_background_one">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundTransparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Usage: Constraintlayout to stack all the text view,
            scrollview and button one after the other. Scrollview is
            used to support smaller screens and also to support small
            available space when soft keyboard is on screen.
            Constraintlayout also helps to easily stick the
            button to the bottom of the screen. -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/shoeDetailTitleTextView"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/shoe_detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/saveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shoeDetailTitleTextView">
                <!--  Usage: LinearLayout to stack all the text views
                    one after the other vertically. -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shoeDetailTitleTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shoeNameEditText"
                        style="@style/EditTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name_hint"
                        android:text="@={shoeViewModel.newShoe.name}" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shoeSizeEditText"
                        style="@style/EditTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_size_hint"
                        android:inputType="number"
                        android:text="@={shoeViewModel.newShoe.size}" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shoeCompanyEditText"
                        style="@style/EditTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_company_hint"
                        android:text="@={shoeViewModel.newShoe.company}" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shoeDescriptionEditText"
                        style="@style/EditTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_desc_hint"
                        android:text="@={shoeViewModel.newShoe.description}" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/saveButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save_button"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

